[gd_scene load_steps=22 format=2]

[ext_resource path="res://addons/platform2d/textures/thick_platform_default.tres" type="Resource" id=1]
[ext_resource path="res://addons/platform2d/thick_platform.gd" type="Script" id=2]
[ext_resource path="res://addons/platform2d/textures/middle_mountain_thick_platform.tres" type="Resource" id=3]
[ext_resource path="res://addons/platform2d/textures/border_mountain_thick_platform_.tres" type="Resource" id=4]
[ext_resource path="res://src/Actors/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/platform2d/textures/beach_thick_platform.tres" type="Resource" id=6]
[ext_resource path="res://src/ui_components/DisplayCanvas.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/ui_components/CanvasLayer.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/etc/LocationArea.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/etc/FightCloud.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/camp.png" type="Texture" id=11]
[ext_resource path="res://assets/healing_sign.png" type="Texture" id=12]
[ext_resource path="res://src/maps/Camp.gd" type="Script" id=13]
[ext_resource path="res://assets/chest.png" type="Texture" id=14]
[ext_resource path="res://src/maps/QuestChest.gd" type="Script" id=15]
[ext_resource path="res://assets/parallax_background/clouds.png" type="Texture" id=16]

[sub_resource type="Curve2D" id=6]
bake_interval = 50.0
_data = {
"points": PoolVector2Array( 0, 0, -17.9872, -383.728, -664.527, 382.616, -133.656, 246.749, 35.9843, -164.499, -589.273, -956.399, -181.415, -85.0436, 45.3538, 21.2609, -330.61, -1340.83, -38.3945, -66.7424, 19.1973, 33.3712, -201.658, -919.865, -43.5607, 51.334, 10.8902, -12.8335, -38.8893, -1102.87, -18.4361, -17.7712, 18.4361, 17.7712, 34.9267, -1143.15, 15.159, -78.8128, 6.60095, 98.4604, 52.7773, -1005.65, -28.128, -155.883, 116.725, 106.992, 75.3497, -599.767, 6.08728, -265.29, 196.097, 34.1038, 251.995, -445.821, -6.8208, -317.165, 13.8426, 146.869, 429.335, -204.095, 92.0804, -163.698, -231.262, 41.8762, 238.353, 369.077, 306.063, 13.7434, 0, 0, -664.527, 382.616 )
}

[sub_resource type="Curve2D" id=7]
bake_interval = 50.0
_data = {
"points": PoolVector2Array( 0, 0, 59.2197, -136.946, -1095.89, 274.291, -103.037, 155.452, -14.5062, -59.2197, -966.153, -106.754, -23.058, 38.4003, 54.0359, 7.565, -977.838, -315.252, -109.927, -84.6105, 157.497, 55.1253, -752.274, -272.79, -239.1, 91.4205, 101.969, -59.7749, -113.793, -345.38, -225.035, 24.6132, 17.5808, 196.906, 596.473, -268.498, 94.5425, -246.876, -255.385, 14.8049, 543.731, 304.638, 347.916, 81.4271, 0, 0, -1095.89, 274.291 )
}

[sub_resource type="Curve2D" id=8]
bake_interval = 50.0
_data = {
"points": PoolVector2Array( 0, 0, 8.20215, -123.033, -752.463, 519.723, 8.20215, 102.527, 2.05054, -47.1626, -707.351, 228.546, 7.96094, 71.6494, -6.33929, -62.9606, -718.015, -39.0952, -6.16187, 29.0483, 29.8303, -20.7708, -733.334, -145.651, -9.5397, 10.7444, 0.212158, -43.4595, -559.257, -188.456, -19.0794, 21.4889, 25.21, -1.32684, -565.207, -297.054, -41.1323, 1.32684, 3.25732, -34.9806, -416.796, -328.322, -5.28174, 22.8866, 11.7558, -22.8018, -413.803, -412.367, -5.53999, 8.2505, 13.7331, -13.7331, -303.666, -460.795, -7.56494, 16.2108, 11.08, -16.501, -302.488, -538.704, -8.38, -8.38005, -10.2634, -25.4966, -238.426, -563.947, -13.3164, 7.81952, 13.3901, -21.5593, -226.57, -641.032, -5.23786, -9.70172, 5.93585, 13.2684, -186.749, -667.301, -10.4757, -19.4034, 10.4757, 19.4034, -126.284, -622.885, 0.626465, -28.5826, 51.677, 1.39667, -130.882, -556.964, -104.75, 1.39667, 261.269, 5.55212, 81.4121, -551.377, 7.23486, 50.832, -12.6683, -20.6608, 344.979, -595.068, -22.3531, 5.10455, 22.3531, -5.10455, 339.503, -637.184, -29.3302, -13.9667, 1.88818, -74.295, 448.333, -621.605, -21.0325, 13.6948, 21.0325, -13.6948, 472.973, -721.047, -8.81345, 12.5111, -14.6499, -58.9476, 547.497, -695.629, -17.6269, 25.0222, 70.0476, 6.51605, 576.071, -780.358, -79.2158, -16.2763, 34.5015, 26.0286, 738.972, -822.712, -108.158, 58.7091, 3.92505, -25.1851, 972.436, -947.562, -5.56104, 24.6273, 23.2134, -10.833, 972.388, -1036.3, -32.6371, -64.5863, 33.1489, -13.5051, 1118.46, -1033.09, 34.0461, 174.874, 40.0294, -43.2416, 1204.43, -1197.47, -88.781, -17.1046, 3.17773, 38.1326, 1357.69, -1143.65, 0.80127, -42.3588, -8.38391, 18.8419, 1356.09, -1050.45, -26.0642, -53.7574, 18.7336, 5.70154, 1452.35, -1032.26, -8.75916, -15.7637, -0.976562, 16.9279, 1533.44, -1019.97, 1.07471, -72.6365, 77.3779, 12.2176, 1532.18, -909.747, -20.1385, -10.3746, -3.2417, 18.4717, 1700.23, -893.088, -0.300781, -48.4471, 192.755, 6.13867, 1697.82, -794.337, -113.504, -12.9366, 3.42944, -28.2934, 2063.82, -787.475, -3.57056, 22.2202, 3.57056, -22.2202, 2063.26, -879.634, -19.1409, 0.407257, 18.5125, -18.7706, 2107.61, -897.73, -38.2817, 0.814514, 27.6934, 29.3222, 2191.9, -850.609, -76.5635, 1.62903, 21.1772, 34.3917, 2344.99, -781.179, -15.8628, -42.8084, 79.3279, 9.43372, 2343.4, -694.224, -136.8, -7.59998, 9.5, 31.35, 2517, -629, -0.282715, -23.8314, 0.282959, 23.8314, 2511.2, -527.404, -80.7498, -21.85, 41.7998, 79.9367, 2596.98, -475.725, -161.5, -43.7, 0.86084, 34.5484, 2754.31, -322.48, -3.77393, -42.2635, 21.6401, 31.743, 2755.82, -216.879, -15.6217, -19.4606, 19.7349, 47.6184, 2912.95, -158.437, -31.2434, -38.9212, -6.99805, 46.654, 3090.23, -109.45, 23.4905, -64.5991, -44.3213, 105.517, 3071.57, 79.4987, 46.981, -129.198, -410.555, 25.6597, 2945.6, 495.264, 199.569, -4.61426, -318.083, 45.34, 1168.65, 523.881, 399.139, -9.22852, 0, 0, -752.463, 519.723 )
}

[sub_resource type="Curve2D" id=9]
bake_interval = 50.0
_data = {
"points": PoolVector2Array( 0, 0, 46.5244, -188.684, -1186.67, 278.574, 12.9233, 160.252, 258.124, -25.305, -1054.85, -313.141, -248.132, 12.9235, 105.973, 38.7706, -530.497, -374.632, -176.406, -13.8928, 76.249, -2.58472, -168.638, -260.904, -131.981, -4.90787, 22.2437, 36.5437, 363.311, -252.952, -3.17773, -35.7493, 204.192, 33.8593, 364.105, -191.781, -38.5956, -64.6589, 9.6489, 16.1647, 1217.85, -90.0554, -59.9537, -53.7605, 0.293945, -37.8409, 2126.11, -7.82745, 0.37207, 39.8719, 55.4434, -6.62238, 2125.74, -317.421, -79.3044, 83.1905, 28.2253, -21.9952, 2360.99, -714.15, 11.6475, 0.306511, 24.9773, 126.374, 2394.46, -357.093, 23.295, 0.613022, -106.002, 33.474, 2360.99, 256.599, 46.5899, 1.22604, -211.473, 30.2103, 2167.19, 294.018, 93.1798, 2.45209, -176.228, 25.1754, 1351.51, 277.098, 186.36, 4.90417, -396.554, 28.8403, 551.704, 303.77, 372.719, 9.80835, 0, 0, -1186.67, 278.574 )
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 57, 35 )

[node name="Island" type="Node2D"]

[node name="fight_cloud" parent="." instance=ExtResource( 10 )]
visible = false

[node name="BeachLocation" parent="." instance=ExtResource( 9 )]
modulate = Color( 0.513726, 0.145098, 0.380392, 1 )
position = Vector2( 7500, 336 )
scale = Vector2( 2.92, 1.8 )

[node name="ForestLocation" parent="." instance=ExtResource( 9 )]
modulate = Color( 0.376471, 0.905882, 0.482353, 1 )
position = Vector2( 1272, 336 )
scale = Vector2( 1.32, 1.4 )
speed_factor = Vector2( 0.65, 1 )

[node name="MountainLocation" parent="." instance=ExtResource( 9 )]
modulate = Color( 0.65098, 0.678431, 0.929412, 1 )
position = Vector2( 3945, -185 )
scale = Vector2( 3.41852, 3.18438 )
enemies_positions = PoolVector2Array( 2766, -185, 4642, -350 )
speed_factor = Vector2( 1, 0.85 )

[node name="DisplayCanvas" parent="." instance=ExtResource( 7 )]

[node name="CanvasLayer" parent="." instance=ExtResource( 8 )]

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 861, 389 )

[node name="Camera2D" parent="Player" index="2"]
limit_top = -1024
limit_right = 9216
limit_bottom = 1024

[node name="BorderMountain" type="StaticBody2D" parent="."]
position = Vector2( 203, 835 )
scale = Vector2( 0.72, 0.72 )
collision_layer = 8
collision_mask = 0
script = ExtResource( 2 )
MovingPlatform = false
Curve = SubResource( 6 )
BakeInterval = 50.0
Style = ExtResource( 4 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BorderMountain"]
visible = false
polygon = PoolVector2Array( -664.527, 382.616, -666.891, 332.735, -684.088, -316.7, -683.198, -366.826, -673.683, -566.319, -669.348, -616.136, -657.305, -715.514, -649.13, -764.833, -639.045, -813.769, -626.477, -862.165, -610.562, -909.604, -589.923, -955.194, -589.273, -956.399, -557.966, -1103.02, -545.6, -1151.47, -530.954, -1199.27, -512.874, -1245.83, -489.454, -1289.96, -457.442, -1328.42, -413.619, -1352.51, -363.592, -1352.47, -330.61, -1340.83, -304.538, -1298.17, -289.273, -1250.54, -230.791, -1007.51, -217.353, -959.359, -201.658, -919.865, -157.911, -944.104, -126.719, -983.182, -68.2744, -1064.29, -38.8893, -1102.87, -1.91567, -1136.52, 34.9267, -1143.15, 56.3278, -1097.95, 58.4766, -1047.99, 56.401, -805.729, 58.2885, -755.751, 61.6337, -705.836, 66.7987, -656.119, 74.1323, -606.655, 75.3497, -599.767, 117.582, -572.995, 167.498, -569.729, 215.566, -583.468, 248.548, -545.862, 252.194, -496.038, 251.999, -445.989, 251.995, -445.821, 351.537, -438.092, 401.512, -436.363, 424.853, -392.146, 427.22, -342.239, 429.335, -204.095, 429.667, -154.064, 423.723, -104.37, 413.766, -55.4262, 400.957, -7.10365, 385.992, 40.6137, 351.182, 134.379, 331.793, 180.531, 289.734, 271.286, 267.116, 315.939, 243.431, 359.987, 238.353, 369.077, 189.033, 376.902, 89.6515, 387.52, -60.2765, 395.18, -660.061, 382.816, -664.527, 382.616 )

[node name="TileMap" type="TileMap" parent="."]
format = 1

[node name="ForestGround" type="StaticBody2D" parent="."]
position = Vector2( 1472, 835 )
collision_layer = 8
collision_mask = 0
script = ExtResource( 2 )
MovingPlatform = false
Curve = SubResource( 7 )
BakeInterval = 50.0
Style = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ForestGround"]
visible = false
polygon = PoolVector2Array( -1095.89, 274.291, -1078.33, 227.466, -1065.21, 179.208, -1045.43, 81.1738, -1033.04, 32.7077, -1016.18, -14.3408, -994.61, -59.4535, -969.03, -102.377, -966.153, -106.754, -976.73, -155.645, -984.535, -205.012, -988.259, -254.893, -982.61, -304.574, -977.838, -315.252, -927.935, -318.447, -878.133, -322.95, -828.769, -314.861, -783.297, -294.01, -752.274, -272.79, -704.154, -259.299, -654.784, -251.117, -604.949, -247.296, -555.004, -247.061, -505.031, -249.842, -455.33, -255.19, -405.911, -262.772, -356.898, -272.314, -308.155, -283.648, -259.837, -296.591, -164.484, -326.841, -117.508, -343.964, -113.793, -345.38, -65.3952, -358.076, -15.4007, -357.486, 34.1958, -351.685, 377.316, -283.048, 426.673, -275.323, 476.391, -269.453, 526.28, -266.231, 576.281, -266.802, 596.473, -268.498, 601.11, -218.73, 609.764, -119.157, 612.335, -69.1744, 612.7, -19.2088, 610.278, 30.6808, 604.771, 80.3982, 596.216, 129.634, 584.844, 178.357, 571.033, 226.398, 555.146, 273.798, 543.731, 304.638, 493.781, 307.301, -556.069, 322.104, -605.99, 320.623, -905.424, 302.73, -955.061, 297.427, -1004.53, 290.986, -1053.82, 282.981, -1095.89, 274.291 )

[node name="MiddleMountain" type="StaticBody2D" parent="."]
position = Vector2( 2766, 625 )
collision_layer = 8
collision_mask = 0
script = ExtResource( 2 )
MovingPlatform = false
Curve = SubResource( 8 )
BakeInterval = 50.0
Style = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MiddleMountain"]
visible = false
polygon = PoolVector2Array( -752.463, 519.723, -746.921, 470.04, -725.273, 372.419, -713.866, 323.717, -707.061, 274.18, -707.351, 228.546, -712.554, 28.7191, -716.225, -21.1438, -726.214, -88.4208, -734.537, -137.729, -733.334, -145.651, -685.958, -161.676, -636.845, -171.135, -587.617, -179.891, -559.257, -188.456, -566.456, -237.94, -570.495, -287.777, -565.207, -297.054, -516.345, -307.617, -467.887, -319.936, -418.586, -328.248, -416.796, -328.322, -416.132, -378.312, -413.803, -412.367, -370.458, -437.279, -322.838, -452.54, -303.666, -460.795, -302.597, -510.775, -302.488, -538.704, -259.374, -564.016, -238.426, -563.947, -240.407, -613.91, -226.57, -641.032, -186.749, -667.301, -144.945, -639.858, -126.284, -622.885, -129.151, -572.969, -130.882, -556.964, -80.924, -554.822, 231.31, -548.724, 281.297, -549.349, 330.83, -556.228, 344.979, -595.068, 339.503, -637.184, 389.493, -636.784, 438.264, -625.753, 448.333, -621.605, 450.376, -671.559, 468.7, -718.083, 472.973, -721.047, 520.378, -705.157, 547.497, -695.629, 546.942, -745.622, 576.071, -780.358, 625.356, -788.851, 668.801, -813.592, 717.428, -825.296, 738.972, -822.712, 788.547, -829.288, 831.176, -855.439, 913.669, -911.999, 956.115, -938.389, 972.436, -947.562, 971.405, -997.546, 972.388, -1036.3, 1018.16, -1056.38, 1067.36, -1065.28, 1112.21, -1043.21, 1118.46, -1033.09, 1167.21, -1044.2, 1203.86, -1078.23, 1212.2, -1127.54, 1207.96, -1177.36, 1204.43, -1197.47, 1254.41, -1199.27, 1294.82, -1169.79, 1339.87, -1148.13, 1357.69, -1143.65, 1358.1, -1093.66, 1356.09, -1050.45, 1405.72, -1056.53, 1450.88, -1035.08, 1452.35, -1032.26, 1502.28, -1029.7, 1533.44, -1019.97, 1532.78, -969.976, 1532.32, -919.985, 1532.18, -909.747, 1581.84, -903.948, 1631.75, -900.992, 1681.64, -897.739, 1700.23, -893.088, 1697.6, -843.161, 1697.82, -794.337, 1747.83, -793.074, 1947.88, -793.714, 1997.9, -792.692, 2047.78, -789.173, 2063.82, -787.475, 2063.39, -837.466, 2063.26, -879.634, 2107.61, -897.73, 2150.77, -872.494, 2191.9, -850.609, 2229.32, -817.44, 2273.21, -793.509, 2321.87, -782.027, 2344.99, -781.179, 2342.44, -731.244, 2343.4, -694.224, 2390.39, -677.134, 2429.99, -646.604, 2478.07, -632.86, 2517, -629, 2518.06, -579.003, 2511.21, -529.474, 2511.2, -527.404, 2545.54, -491.062, 2593.41, -476.695, 2596.98, -475.725, 2615.1, -429.122, 2632.79, -382.361, 2671.97, -351.297, 2718.5, -333.016, 2754.31, -322.48, 2753.97, -272.484, 2755.35, -222.503, 2755.82, -216.879, 2799.69, -192.868, 2848.09, -180.372, 2896.46, -167.656, 2912.95, -158.437, 2956.46, -133.823, 3006.33, -130.352, 3056.14, -126.117, 3090.23, -109.45, 3087.55, -59.5346, 3086.67, -9.53752, 3081.74, 40.2186, 3071.57, 79.4987, 2956.96, 462.397, 2945.6, 495.264, 2895.63, 498.072, 1195.08, 523.387, 1168.65, 523.881, -730.006, 519.288, -752.463, 519.723 )

[node name="Beach" type="StaticBody2D" parent="."]
position = Vector2( 6905, 835 )
collision_layer = 8
collision_mask = 0
script = ExtResource( 2 )
MovingPlatform = false
Curve = SubResource( 9 )
BakeInterval = 50.0
Style = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Beach"]
visible = false
polygon = PoolVector2Array( -1186.67, 278.574, -1174.03, 230.259, -1090.45, -57.7211, -1078.38, -106.227, -1067.9, -155.057, -1059.64, -204.403, -1054.59, -254.143, -1054.24, -304.113, -1054.85, -313.141, -1005.06, -318.307, -658.263, -365.441, -608.422, -369.721, -558.516, -373.073, -530.497, -374.632, -484.151, -355.902, -392.783, -315.288, -346.108, -297.294, -298.342, -282.572, -249.544, -271.499, -200.103, -263.985, -168.638, -260.904, 331.283, -254.042, 363.311, -252.952, 364.049, -202.957, 364.105, -191.781, 413.697, -184.965, 1011.95, -139.003, 1061.55, -133.329, 1111.06, -126.241, 1160.12, -116.57, 1207.2, -99.7345, 1217.85, -90.0554, 1267.44, -83.2781, 1916.37, -45.2731, 1966.05, -40.4809, 2015.66, -34.6845, 2065.06, -27.1089, 2113.52, -14.8036, 2126.11, -7.82745, 2126.22, -57.8557, 2125.81, -307.889, 2125.74, -317.421, 2162.54, -351.247, 2188.14, -394.214, 2298.75, -618.329, 2323.22, -661.936, 2351.43, -703.196, 2360.99, -714.15, 2379.73, -667.786, 2386.27, -618.244, 2394.27, -518.6, 2396.72, -468.622, 2398.08, -418.653, 2397.21, -368.666, 2394.46, -357.093, 2402.44, -157.57, 2401, -107.627, 2388.76, 91.9586, 2383.92, 141.77, 2377.86, 191.359, 2368.92, 240.534, 2360.99, 256.599, 2313.11, 271.067, 2264.71, 283.622, 2215.45, 292.207, 2117.44, 299.397, 2017.51, 303.962, 1368.16, 277.75, 1351.51, 277.098, 652.202, 305.196, 602.151, 304.742, 552.196, 303.783, -1148.04, 279.648, -1186.67, 278.574 )

[node name="Camp" type="Area2D" parent="."]
collision_layer = 0
script = ExtResource( 13 )
trigger_message = "Press h key to heal yourself"
adding_health = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camp"]
position = Vector2( 6905, 491 )
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="Camp"]
position = Vector2( 6905, 515 )
scale = Vector2( 0.929283, 1.31897 )
texture = ExtResource( 11 )

[node name="HealingSprite" type="Sprite" parent="Camp"]
position = Vector2( 6905, 336 )
scale = Vector2( 1.35999, 1.36 )
texture = ExtResource( 12 )

[node name="QuestChest" type="Area2D" parent="."]
position = Vector2( 1510, 224 )
collision_layer = 0
script = ExtResource( 15 )
trigger_message = "Its a quest chest. Press q key to play the quest"

[node name="CollisionShape2D" type="CollisionShape2D" parent="QuestChest"]
position = Vector2( 6905, 515 )
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="QuestChest"]
position = Vector2( 6905, 515 )
scale = Vector2( 0.489283, 0.478969 )
texture = ExtResource( 14 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_base_scale = Vector2( 0.5, 0.5 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 0.1 )
motion_mirroring = Vector2( 1387.25, 686.469 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 0, -5.99999 )
scale = Vector2( 1.78968, 2.35853 )
texture = ExtResource( 16 )
centered = false
[connection signal="body_entered" from="Camp" to="Camp" method="_on_Camp_body_entered"]
[connection signal="body_exited" from="Camp" to="Camp" method="_on_Camp_body_exited"]
[connection signal="body_entered" from="QuestChest" to="QuestChest" method="_on_QuestChest_body_entered"]
[connection signal="body_exited" from="QuestChest" to="QuestChest" method="_on_QuestChest_body_exited"]

[editable path="Player"]
